Fix issues for modal form sketchy when vanish + truncate in book card info.
Solutions recommendation by @Mr.Whiskers and @arturopstem.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -546,6 +546,9 @@ body {
 .book_info {
     font-size: 1rem;
     margin-top: 0.6em;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
 }
 
 .book_title {
@@ -553,7 +556,7 @@ body {
     font-size: 2.6rem;
     font-weight: 600;
     color: var(--black_text);
-    max-width: var(--book_card_maxwidth_for_text);
+    max-width: 100%;
 
     white-space: nowrap;
     overflow: hidden;
@@ -563,7 +566,7 @@ body {
 .book_author_wrapper {
     font-size: 1rem;
     margin: 0.4em 0;
-    max-width: var(--book_card_maxwidth_for_text);
+    max-width: 100%;
 
     white-space: nowrap;
     overflow: hidden;
@@ -575,7 +578,7 @@ body {
     display: block;
     font-size: 1.4rem;
     color: var(--black_text);
-    max-width: var(--book_card_maxwidth_for_text);
+    max-width: 100%;
 }
 
 .book_author,
@@ -686,7 +689,8 @@ body {
 @keyframes vanish {
     from {
         opacity: 1;
-        display: block;
+        /* display: block; */
+        display: grid;
     }
     to {
         opacity: 0;
